--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,16 @@ publish = false
 [lib]
 doctest = false
 
+[rust]
+debuginfo-level = 1
+
+[build]
+rustflags = ["-C", "symbol-mangling-version=v0"]
+
+[profile.profiling]
+inherits = "release"
+debug = true
+
 [profile.dhat]
 inherits = "release"
 debug = 1
@@ -20,6 +30,8 @@ today = ["chrono"]
 test_lib = []
 
 [dependencies]
+regex = "1.11.1"
+rayon = "1.10.0"
 
 # Template dependencies
 chrono = { version = "0.4.38", optional = true }
