--- a/.github/workflows/readme-stars.yml
+++ b/.github/workflows/readme-stars.yml
@@ -2,8 +2,8 @@ name: Update readme ⭐️ progress
 
 on:
     # !Please set a different minute than 51 if you enable this!
-    # schedule:
-    #     - cron: "51 */6 * * *" # Every 6 hours
+    schedule:
+        - cron: "30 */6 * * *" # Every 6 hours
     workflow_dispatch:
 
 jobs:
