--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,6 @@ publish = false
 [lib]
 doctest = false
 
-[rust]
-debuginfo-level = 1
-
 [build]
 rustflags = ["-C", "symbol-mangling-version=v0"]
 
@@ -30,9 +27,6 @@ today = ["chrono"]
 test_lib = []
 
 [dependencies]
-regex = "1.11.1"
-rayon = "1.10.0"
-
 # Template dependencies
 chrono = { version = "0.4.38", optional = true }
 dhat = { version = "0.3.3", optional = true }
@@ -40,3 +34,6 @@ pico-args = "0.5.0"
 tinyjson = "2.5.1"
 
 # Solution dependencies
+itertools = "0.13.0"
+regex = "1.11.1"
+rayon = "1.10.0"
